# praxnest

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
docs/: article-framework.md  article-v0.1.md
src/praxnest/: __init__.py  __main__.py  api_tokens.py  app.py  attachments.py  audit.py  auth.py  cli.py  comments.py  db.py  exporter.py  memory.py  notes.py  notify.py  presence.py  tasks.py  workspaces.py
src/praxnest/ai/: __init__.py  client.py
src/praxnest/routes/: __init__.py  ai.py  api_tokens.py  attachments.py  audit.py  auth.py  comments.py  export.py  memory.py  notes.py  notify.py  presence.py  tasks.py  workspaces.py
src/praxnest/web/: index.html
src/praxnest/workflows/: __init__.py  bug.py  prd.py  test_report.py
tests/: conftest.py  test_ai.py  test_api_tokens.py  test_attachments.py  test_audit.py  test_auth.py  test_comments.py  test_export.py  test_members.py  test_memory.py  test_notes.py  test_notify.py  test_presence.py  test_tasks.py  test_versions.py  test_workspaces.py
