[project]
name = "praxnest"
version = "0.3.0"
description = "Local-first team AI workspace — collaborative markdown + PRD/bug/test workflows + team memory, on-prem deployable"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Prax Contributors", email = "543370794@qq.com"}
]
keywords = ["team-collaboration", "ai", "knowledge-base", "obsidian-alternative", "prd", "local-first", "prax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "fastapi >= 0.110",
    "uvicorn >= 0.27",
    "bcrypt >= 4.0",
    "itsdangerous >= 2.1",       # session cookie signing (FastAPI's Session middleware)
    "python-multipart >= 0.0.7", # form posts (login page)
]

# praxagent is npm-distributed; pip can't resolve it. We invoke it via subprocess
# at runtime (`prax prompt ...`). The pip dep is therefore declared as optional
# below; production installs ensure `prax` is on PATH separately.

[project.urls]
Homepage = "https://github.com/ChanningLua/praxnest"
Repository = "https://github.com/ChanningLua/praxnest"
Issues = "https://github.com/ChanningLua/praxnest/issues"

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-asyncio >= 0.23",
    "httpx >= 0.27",
    "ruff >= 0.5",
]

[project.scripts]
praxnest = "praxnest.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
praxnest = [
    "web/*.html",
    "web/assets/*",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: browser-driven end-to-end test (opt in via `pytest -m e2e`)",
]
addopts = "-m 'not e2e'"
